<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".ui.fragments.ListFragment">

    <TextView
        style="@style/Title"
        android:layout_marginBottom="8dp"
        android:text="@string/rate_app" />

    <androidx.appcompat.widget.AppCompatRatingBar
        android:id="@+id/rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:rating="5"
        android:numStars="5" />

    <TextView
        style="@style/Title"
        android:layout_marginBottom="8dp"
        android:text="@string/review_title" />

    <EditText
        android:id="@+id/review_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/send_review_btn"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

</LinearLayout>